[gd_scene load_steps=14 format=3 uid="uid://nccqi682d71x"]

[ext_resource type="Script" path="res://UI/Menues/Skripts/choose_campus.gd" id="1_8f0m3"]
[ext_resource type="Texture2D" uid="uid://bryejuohsdw34" path="res://UI/Images/Background.png" id="1_s02qh"]
[ext_resource type="FontFile" uid="uid://c0ij43l2fym11" path="res://UI/Images/Pixellari.ttf" id="2_6llcm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c7wxc"]
texture = ExtResource("1_s02qh")
modulate_color = Color(0.572549, 0.572549, 0.572549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jee1"]
bg_color = Color(0.962007, 0.96593, 0.963888, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
shadow_size = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a2t7h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbonu"]
bg_color = Color(0.756863, 0.631373, 0.458824, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evlxa"]
bg_color = Color(0.564706, 0.454902, 0.298039, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sa3af"]
bg_color = Color(0.909804, 0.831373, 0.72549, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4174q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqnme"]
bg_color = Color(0.757279, 0.632418, 0.459061, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06j1p"]
bg_color = Color(0.563474, 0.454029, 0.299765, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8d842"]
bg_color = Color(0.909804, 0.831373, 0.72549, 0.796078)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="ChooseCampus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8f0m3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_c7wxc")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.0
offset_top = 28.0
offset_right = 255.0
offset_bottom = 167.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.764706, 0.545098, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("2_6llcm")
theme_override_font_sizes/font_size = 85
text = "CampusQuest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="title" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -46.0
offset_right = 195.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4jee1")
text = "Where would you like to start exploring?"

[node name="Chose" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -67.0
offset_right = 360.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.66908, 0.580888, 0.35169, 1)
theme_override_fonts/font = ExtResource("2_6llcm")
theme_override_font_sizes/font_size = 46
text = "Where would you like 
your journey to begin?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoBack" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_top = 17.0
offset_right = -27.0
offset_bottom = 59.0
grow_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6llcm")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_a2t7h")
theme_override_styles/hover = SubResource("StyleBoxFlat_vbonu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_evlxa")
theme_override_styles/normal = SubResource("StyleBoxFlat_sa3af")
text = "Go back"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 85.0
offset_right = 201.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 120

[node name="lindholmen" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6llcm")
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_4174q")
theme_override_styles/hover = SubResource("StyleBoxFlat_yqnme")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06j1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_8d842")
text = "  Lindholmen  "

[node name="johanneberg" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6llcm")
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_4174q")
theme_override_styles/hover = SubResource("StyleBoxFlat_yqnme")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06j1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_8d842")
text = "  Johanneberg  "

[connection signal="pressed" from="Panel/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/lindholmen" to="." method="_on_lindholmen_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/johanneberg" to="." method="_on_johanneberg_pressed"]
